automatically backed up by learn

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form method="POST" action="/posts">
-  <input type="text" name="post[:name]">
-  <input type="text" name="post[:content]">
+  <h2>Name: <input type="text" name="post[:name]"></h2><br>
+  <p>Content: <input type="text" name="post[:content]"></p><br>
   <input type="submit" name="submit">
 </form>
