--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,3 @@
-<h2><%= @post.name %></h2>
-<p><%= @post.content %></h2>
+<% @posts.each do |post| %>
+  <h2><%= post.name %></h2>
+  <p><%= post.content %></h2>
