automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
+<h2>All Posts</h2>
 <% @posts.each do |post| %>
-  <h2><%= post.name %></h2>
+  <h3><%= post.name %></h3>
   <p><%= post.content %></h2>
 <% end %>
