automatically backed up by learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,2 +1,4 @@
 <h2>Post #<%= @post.id %></h2>
-<form method="POST" action="patch '/posts/:id'"
+<form method="POST" action="patch '/posts/:id'">
+  <h3>Name: <input id="hidden" type="hidden" 
+</form>
