--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,4 +2,5 @@
 <form method="POST" action="patch '/posts/:id'">
   <h3>Name: <input id="hidden" type="hidden" name="_method" value="patch"></h3>
   <p>Content: <input id="hidden" type="hidden" name="method" value="patch"></p>
+  <input type="submit" value="submit">
 </form>
