--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,7 @@
 <h2>Post #<%= @post.id %></h2><br>
-<h2>
+<h3>Name: <%= @post.name %></h3><br>
+<p>Content: <%= @post.content %></p><br>
+<h2>Enter your edits below...</h2><br>
 <form method="POST" action="patch '/posts/:id'">
   <h3>Name: <input id="hidden" type="hidden" name="_method" value="patch"></h3>
   <p>Content: <input id="hidden" type="hidden" name="method" value="patch"></p>
