automatically backed up by learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,6 +4,6 @@
 <h2>Enter your edits below...</h2><br>
 <form method="POST" action="patch '/posts/:id'">
   <h3>Name: <input id="hidden" type="hidden" name="name_method" value="patch"></h3><br>
-  <p>Content: <input id="hidden" type="hidden" name="_method" value="patch"></p><br>
+  <p>Content: <input id="hidden" type="hidden" name="content_method" value="patch"></p><br>
   <input type="submit" value="submit">
 </form>
