--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,7 +2,7 @@
 <h3>Name: <%= @post.name %></h3><br>
 <p>Content: <%= @post.content %></p><br>
 <h2>Enter your edits below...</h2><br>
-<form method="POST" action="patch '/posts/:id'">
+<form method="POST" action="/posts/<%= @book.id %>">
   <h3>Name: <input id="hidden" type="hidden" name="_method" value="patch"></h3><br>
   <p>Content: <input id="hidden" type="hidden" name="_method" value="patch"></p><br>
   <input type="submit" value="submit">
