--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -6,6 +6,8 @@
   <h3>Name: <input id="hidden" type="hidden" name="_method" value="patch">
     <input type="text" name="name" value="<%= @post.name %>">
   </h3><br>
-  <p>Content: <input id="hidden" type="hidden" name="_method" value="patch"></p><br>
+  <p>Content: <input id="hidden" type="hidden" name="_method" value="patch">
+    <input type="text" name="content" value="<%= @post.content %>"> 
+  </p><br>
   <input type="submit" value="submit">
 </form>
