--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,6 +1,6 @@
 <h2>Post #<%= @post.id %></h2>
 <h3>Name: <%= @post.name %></h3>
 <p>Content: <%= @post.content %></h3>
-<form method="post" action="/posts/<%= @post.id %>/delete">
+<form method="POST" action="/posts/<%= @post.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="patch">
 </form>
