automatically backed up by learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,5 +2,5 @@
 <h3>Name: <%= @post.name %></h3>
 <p>Content: <%= @post.content %></h3>
 <form method="POST" action="/posts/<%= @post.id %>/delete">
-  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input id="hidden" type="hidden" name="_method" value="delete">
 </form>
