--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,4 +3,5 @@
 <p>Content: <%= @post.content %></h3>
 <form method="POST" action="/posts/<%= @post.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete">
 </form>
