--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,6 +2,6 @@
 <h3>Name: <%= @post.name %></h3>
 <p>Content: <%= @post.content %></h3>
 <form method="POST" action="/posts/<%= @post.id %>/delete">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="delete">
 </form>
