--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form method="POST" action="/posts">
-  <input type="text" name="post[:name]">
-  <input type="text" name="post[:content]">
-  <input type="submit" name="submit">
+  <h2>Name: <input type="text" name="name"></h2><br>
+  <p>Content: <input type="text" name="content"></p><br>
+  <input type="submit" value="submit">
 </form>
